# fget

./: README.md  build.sh  install.sh
.github/workflows/: release.yml
integration/: CHANGELOG.md  options.html  package-lock.json  package.json
integration/src/: ambient.ts  global.d.ts  manifest.ts
integration/src/background/: index.ts
integration/src/content/: index.ts
integration/src/options/: Options.tsx
native/: Cargo.toml
native/src/: main.rs
native/src/lib/: args.rs  core.rs  helpers.rs  listener.rs  mod.rs
