[package]
name = "fget"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "./src/lib/mod.rs"

[dependencies]
tiny_http = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
cliclack = "0.3.6"
chrono = "0.4.41"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
clap = { version = "4.5.37", features = ["color", "help", "usage", "derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
sanitize-filename = "0.6.0"
